add github repo link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
         </button>
       <span class="mat-spacer"></span>
       <span>{{ title }}</span>
+      <a mat-button href="https://github.com/poipoii/pypi-requirements" target="_blank">
+        <img src="assets/github-circle-white-transparent.svg">
+        Github
+      </a>
     </mat-toolbar>
 
     <div class="content">
