--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,10 @@
 }
 
 .content {
-  margin-top: 58px;
-  height: calc(100% - 58px);
+  margin-top: 46px;
+  height: calc(100% - 46px);
+}
+
+.mat-toolbar {
+  height: 46px;
 }
