synchronous scrolling between two editors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <span class="mat-spacer"></span>
       <span>{{ title }}</span>
       <a mat-button href="https://github.com/poipoii/pypi-requirements" target="_blank">
-        <img src="assets/github-circle-white-transparent.svg">
+        <img class="github-logo" src="assets/github-circle-white-transparent.svg">
         Github
       </a>
     </mat-toolbar>
