--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,12 @@
   height: 46px;
 }
 
+.github-logo {
+  height: 26px;
+  margin: 0 4px 3px 0;
+  vertical-align: middle;
+}
+
 ::ng-deep .acediff__copy--left div, ::ng-deep .acediff__copy--right div {
   margin-top: -1px !important;
 }
